--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha ./tests/index.js"
   },
   "dependencies": {
+    "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
+    "connect-redis": "^2.2.0",
     "cookie-parser": "~1.3.4",
+    "csurf": "^1.7.0",
     "debug": "~2.1.1",
     "express": "~4.12.0",
+    "express-session": "^1.10.3",
+    "express-validator": "^2.8.0",
+    "helmet": "^0.7.0",
     "jade": "~1.9.2",
+    "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "socket.io": "^1.3.5"
+  },
+  "devDependencies": {
+    "expect.js": "^0.3.1",
+    "superagent": "^0.21.0"
   }
 }
