--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
+    "colors": "^1.0.3",
     "connect-redis": "^2.2.0",
     "cookie-parser": "~1.3.4",
     "csurf": "^1.7.0",
@@ -18,6 +19,7 @@
     "express-validator": "^2.8.0",
     "helmet": "^0.7.0",
     "jade": "~1.9.2",
+    "method-override": "^2.3.1",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
