--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csurf": "^1.7.0",
     "debug": "~2.1.1",
     "express": "~4.12.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.10.3",
     "express-validator": "^2.8.0",
     "helmet": "^0.7.0",
@@ -22,6 +23,7 @@
     "method-override": "^2.3.1",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
+    "nodemailer": "^1.3.2",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5"
   },
