--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "method-override": "^2.3.1",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
+    "multer": "^0.1.8",
     "nodemailer": "^1.3.2",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5"
