--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^0.7.0",
     "jade": "~1.9.2",
     "method-override": "^2.3.1",
+    "moment": "^2.9.0",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
