--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jade": "~1.9.2",
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
+    "moment-twitter": "^0.2.0",
     "mongoose": "^3.8.24",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
