--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha ./tests/index.js"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
     "colors": "^1.0.3",
@@ -16,6 +17,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.0",
     "express-flash": "0.0.2",
+    "express-paginate": "0.0.6",
     "express-session": "^1.10.3",
     "express-validator": "^2.8.0",
     "helmet": "^0.7.0",
@@ -24,6 +26,7 @@
     "moment": "^2.9.0",
     "moment-twitter": "^0.2.0",
     "mongoose": "^3.8.24",
+    "mongoose-paginate": "^3.1.3",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
     "nodemailer": "^1.3.2",
