--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
     "nodemailer": "^1.3.2",
+    "rndm": "^1.1.0",
     "serve-favicon": "~2.2.0",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "expect.js": "^0.3.1",
