--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
     "nodemailer": "^1.3.2",
+    "postmark": "^1.0.0",
     "rndm": "^1.1.0",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5",
