--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^1.3.2",
     "peer": "^0.2.8",
     "postmark": "^1.0.0",
+    "redis": "^0.12.1",
     "rndm": "^1.1.0",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5",
