--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "method-override": "^2.3.1",
     "moment": "^2.9.0",
     "moment-twitter": "^0.2.0",
-    "mongoose": "^3.8.24",
+    "mongoose": "3.8.24",
     "mongoose-paginate": "^3.1.3",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
